--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HEROKU_URL=https://tgtarget.herokuapp.com/
 PORT=6033
-PROD_MONGODB=mongodb://users:JiowvEchNetvu3O@ds219983.mlab.com:19983/tgtarget
+PROD_MONGODB=
 TOKEN=666392396:AAF_z0xPqS1vJklr9PTuug_YiwsssWmWJcA
